--- a/cssFiles/HomePage.css
+++ b/cssFiles/HomePage.css
@@ -123,10 +123,10 @@ nav ul li a {
   border: none;
   transition: ease 0.3s;
 }
-.btn2:hover{
+.btn2:hover {
   transform: scale(1.1);
 }
-.btn1:hover{
+.btn1:hover {
   transform: scale(1.1);
 }
 .row {
@@ -146,7 +146,7 @@ h1 {
   justify-content: center;
   align-items: center;
 }
-.column h1{
+.column h1 {
   margin-bottom: 20px;
 }
 .star {
@@ -234,7 +234,7 @@ h1 {
 
 /* Aside */
 aside {
-  width: 20%;
+  width: 70%;
   height: 100%;
   /* background: linear-gradient(to bottom, #76c2c1, #fcfdea); */
   /* background: linear-gradient(to bottom, #76c2c1, #213842); */
@@ -257,7 +257,7 @@ aside div a {
   transition: ease 0.3s;
   display: block;
   margin-bottom: 15px;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
 aside div a:hover {
@@ -270,18 +270,18 @@ aside form {
   margin-top: 10%;
 }
 
-  aside form input {
-    padding: 10px;
-    border-radius: 5px;
-    width: 70%;
-    border: 1px solid #ddd;
-    transition: ease 0.3s;
-  }
+aside form input {
+  padding: 10px;
+  border-radius: 5px;
+  width: 70%;
+  border: 1px solid #ddd;
+  transition: ease 0.3s;
+}
 
-  aside form input:focus {
-    border-color: #007bff;
-    outline: none;
-  }
+aside form input:focus {
+  border-color: #007bff;
+  outline: none;
+}
 
 #angilal {
   margin-bottom: -10%;
@@ -292,16 +292,14 @@ aside form {
 
 /* Main */
 #main {
-  width: 70%;
-  height: 700px;
   overflow-y: auto;
   padding: 20px;
   background: linear-gradient(to bottom, #213842, #1b2c36, #121a1f);
   white-space: normal;
-  box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5)
+  box-shadow: inset 10px 10px 10px rgba(0, 0, 0, 0.5);
 }
-#scroll{
-  width: 10% ;
+#scroll {
+  width: 10%;
   height: 100%;
 }
 /* Bagsh  */
@@ -316,9 +314,8 @@ aside form {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: ease 0.3s;
   flex-shrink: 0;
-  
 }
-#medeelel{
+#medeelel {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -326,7 +323,7 @@ aside form {
   background-color: #fcfdea;
   width: 100%;
   border-bottom-right-radius: 10px;
-  border-bottom-left-radius: 10px;  
+  border-bottom-left-radius: 10px;
 }
 .bagsh:hover {
   transform: translateY(-5px);
@@ -396,13 +393,13 @@ aside form {
   background-color: #f1f1f1;
 }  */
 
-footer{
-height: 400px;
+footer {
+  height: 400px;
 }
 
 /* media query gar utas  */
 @media screen and (max-width: 600px) {
-  header nav ul{
+  header nav ul {
     display: flex;
     flex-direction: column;
 
@@ -411,7 +408,7 @@ height: 400px;
     padding-top: 3%;
     width: 100%;
   }
-  #nevtreh{
+  #nevtreh {
     border: none;
     background-color: #76c2c1;
     padding: 5px;
@@ -419,7 +416,7 @@ height: 400px;
     left: 8%;
     border-radius: 5px;
   }
-  .text1{
+  .text1 {
     font-size: 10px;
     margin: 10px;
     flex-wrap: nowrap;
@@ -430,7 +427,7 @@ height: 400px;
     flex-direction: column;
     align-items: center;
   }
-  .column h1{
+  .column h1 {
     margin-bottom: 0px;
   }
   .teacherImg {
@@ -440,63 +437,64 @@ height: 400px;
     font-size: 12px;
     width: 80%;
   }
-   .abtTchr {
+  .abtTchr {
     display: block;
-  width: 80%;
-  max-width: 800px;
-  margin: 0 auto;
-  border-collapse: collapse;
-  margin-block: 20px;
-  border-bottom: none;
-  border-radius: 10%;
-}
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    border-collapse: collapse;
+    margin-block: 20px;
+    border-bottom: none;
+    border-radius: 10%;
+  }
 
-.abtTchr th, .abtTchr td {
-  padding: 10px;
-  text-align: left;
-  border-bottom: none;
-}
+  .abtTchr th,
+  .abtTchr td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: none;
+  }
 
-.abtTchr th {
-  background-color: #76c2c1;
-  font-weight: bold;
-}
+  .abtTchr th {
+    background-color: #76c2c1;
+    font-weight: bold;
+  }
 
-.abtTchr tr:nth-child(even) {
-  background-color: #76c2c1;
-}
+  .abtTchr tr:nth-child(even) {
+    background-color: #76c2c1;
+  }
 
-.abtTchr tr:hover {
-  background-color: #f1f1f1;
-}
+  .abtTchr tr:hover {
+    background-color: #f1f1f1;
+  }
 
-#realMain aside {
-  width: 40%;
-}
-.bagsh {
-  display: inline-flex;
-  width: 100px;
-  height: 130px;
-  background-color: #76c2c1;
-  margin: 10px;
-  align-items: center;
-  border-radius: 10px;
-  flex-direction: column;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: ease 0.3s;
-  flex-shrink: 0;
-  margin-bottom: 80px;
-  font-size: 10px;
-}
+  #realMain aside {
+    width: 40%;
+  }
+  .bagsh {
+    display: inline-flex;
+    width: 100px;
+    height: 130px;
+    background-color: #76c2c1;
+    margin: 10px;
+    align-items: center;
+    border-radius: 10px;
+    flex-direction: column;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: ease 0.3s;
+    flex-shrink: 0;
+    margin-bottom: 80px;
+    font-size: 10px;
+  }
 
-#main {
-  display: inline-block;
-  width: 70%;
-  height: 400px;
-  overflow-y: auto;
-  background: linear-gradient(to bottom, #213842, #1b2c36, #121a1f);
-  flex-wrap: wrap;
-}
+  #main {
+    display: inline-block;
+    width: 70%;
+    height: 400px;
+    overflow-y: auto;
+    background: linear-gradient(to bottom, #213842, #1b2c36, #121a1f);
+    flex-wrap: wrap;
+  }
 }
 
 /* media query tablet  */
@@ -518,7 +516,7 @@ height: 400px;
     left: 8%;
     border-radius: 5px;
   } */
-  .text1{
+  .text1 {
     font-size: 10px;
     margin: 10px;
     flex-wrap: nowrap;
@@ -530,7 +528,7 @@ height: 400px;
     flex-wrap: wrap;
     align-items: center;
   }
-  .column h1{
+  .column h1 {
     margin-bottom: 0px;
   }
   .teacherImg {
@@ -540,66 +538,66 @@ height: 400px;
     font-size: 12px;
     width: 80%;
   }
-   .abtTchr {
+  .abtTchr {
     display: block;
-  width: 80%;
-  max-width: 800px;
-  margin: 0 auto;
-  border-collapse: collapse;
-  margin-block: 20px;
-  border-bottom: none;
-  border-radius: 10%;
-}
+    width: 80%;
+    max-width: 800px;
+    margin: 0 auto;
+    border-collapse: collapse;
+    margin-block: 20px;
+    border-bottom: none;
+    border-radius: 10%;
+  }
 
-.abtTchr th, .abtTchr td {
-  padding: 10px;
-  text-align: left;
-  border-bottom: none;
-}
+  .abtTchr th,
+  .abtTchr td {
+    padding: 10px;
+    text-align: left;
+    border-bottom: none;
+  }
 
-.abtTchr th {
-  background-color: #76c2c1;
-  font-weight: bold;
-}
+  .abtTchr th {
+    background-color: #76c2c1;
+    font-weight: bold;
+  }
 
-.abtTchr tr:nth-child(even) {
-  background-color: #76c2c1;
-}
+  .abtTchr tr:nth-child(even) {
+    background-color: #76c2c1;
+  }
 
-.abtTchr tr:hover {
-  background-color: #f1f1f1;
-}
+  .abtTchr tr:hover {
+    background-color: #f1f1f1;
+  }
 
-#realMain aside {
-  width: 40%;
-}
-.bagsh {
-  display: inline-flex;
-  width: 100px;
-  height: 130px;
-  background-color: #76c2c1;
-  margin: 10px;
-  align-items: center;
-  border-radius: 10px;
-  flex-direction: column;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: ease 0.3s;
-  flex-shrink: 0;
-  margin-bottom: 80px;
-  font-size: 10px;
-}
+  #realMain aside {
+    width: 40%;
+  }
+  .bagsh {
+    display: inline-flex;
+    width: 100px;
+    height: 130px;
+    background-color: #76c2c1;
+    margin: 10px;
+    align-items: center;
+    border-radius: 10px;
+    flex-direction: column;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: ease 0.3s;
+    flex-shrink: 0;
+    margin-bottom: 80px;
+    font-size: 10px;
+  }
 
-#main {
-  display: inline-block;
-  width: 70%;
-  height: 400px;
-  overflow-y: auto;
-  background: linear-gradient(to bottom, #213842, #1b2c36, #121a1f);
-  flex-wrap: wrap;
-}
+  #main {
+    display: inline-block;
+    width: 70%;
+    height: 400px;
+    overflow-y: auto;
+    background: linear-gradient(to bottom, #213842, #1b2c36, #121a1f);
+    flex-wrap: wrap;
+  }
 }
 
 /* media query mac  */
 @media screen and (min-width: 1025px) {
- 
 }
