--- a/cssFiles/HomePage.css
+++ b/cssFiles/HomePage.css
@@ -375,7 +375,7 @@ aside form input:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #fcfdea;
+  background-color: #76c2c1;
   width: 100%;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
