--- a/cssFiles/SignIn.css
+++ b/cssFiles/SignIn.css
@@ -13,6 +13,20 @@ body {
   min-height: 100vh;
 }
 
+.back {
+  position: fixed;
+  top: 1.5%;
+  cursor: pointer;
+  left: 1.5%;
+  height: 45px;
+  width: 45px;
+}
+.back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 .container {
   background-color: white;
   border-radius: 10px;
@@ -27,7 +41,7 @@ body {
 }
 
 .logo h1 {
-  color: #3498db;
+  color: #5833f1;
   font-size: 28px;
 }
 
@@ -59,7 +73,7 @@ h2 {
 }
 
 .input-group input:focus {
-  border-color: #3498db;
+  border-color: #5833f1;
   outline: none;
 }
 
@@ -71,7 +85,7 @@ h2 {
 }
 
 .remember-forgot a {
-  color: #3498db;
+  color: #5833f1;
   text-decoration: none;
 }
 
@@ -80,7 +94,7 @@ h2 {
 }
 
 .btn {
-  background-color: #3498db;
+  background-color: #5833f1;
   color: white;
   border: none;
   border-radius: 5px;
@@ -92,7 +106,7 @@ h2 {
 }
 
 .btn:hover {
-  background-color: #2980b9;
+  background-color: #375cd6;
 }
 
 .register-link {
@@ -102,7 +116,7 @@ h2 {
 }
 
 .register-link a {
-  color: #3498db;
+  color: #5833f1;
   text-decoration: none;
 }
 
