--- a/cssFiles/SignUp.css
+++ b/cssFiles/SignUp.css
@@ -57,7 +57,7 @@ body {
 }
 
 .form-group input:focus {
-  border-color: #4285f4;
+  border-color: #5833f1;
   outline: none;
 }
 
@@ -83,7 +83,7 @@ body {
 .btn {
   width: 100%;
   padding: 12px;
-  background-color: #4285f4;
+  background-color: #5833f1;
   color: white;
   border: none;
   border-radius: 5px;
@@ -92,9 +92,22 @@ body {
   cursor: pointer;
   transition: background-color 0.3s;
 }
+.back {
+  position: fixed;
+  top: 1.5%;
+  cursor: pointer;
+  left: 1.5%;
+  height: 45px;
+  width: 45px;
+}
+.back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 
 .btn:hover {
-  background-color: #3367d6;
+  background-color: #375cd6;
 }
 
 .login-link {
@@ -104,7 +117,7 @@ body {
 }
 
 .login-link a {
-  color: #4285f4;
+  color: #5833f1;
   text-decoration: none;
   font-weight: 600;
 }
