--- a/my-appp/styles/global.css
+++ b/my-appp/styles/global.css
@@ -19,6 +19,7 @@
   }
   
   body {
+    font-size: 1.6rem;
     font-family: "Poppins", sans-serif;
     font-weight: 300;
     color: var(--text-color);
