--- a/my-appp/styles/main.css
+++ b/my-appp/styles/main.css
@@ -13,7 +13,7 @@
   .zurag1 {
     width: 50%;
     min-height: 50rem;
-    background-image: url(../zurag/1.png);
+    background-image: url(/zurag/1.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -201,7 +201,7 @@
   
   .zurag2 {
     height: 50rem;
-    background-image: url(../zurag/3.png);
+    background-image: url(/zurag/3.png);
     background-repeat: no-repeat;
     background-size: contain;
     background-position: center;
@@ -298,7 +298,7 @@
   .spro {
     min-width: 30rem;
     height: 30rem;
-    background-image: url(../zurag/suragch.png);
+    background-image: url(/zurag/suragch.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
