--- a/my-appp/styles/tInfo.css
+++ b/my-appp/styles/tInfo.css
@@ -77,4 +77,13 @@
   .pro button:hover {
     background-color: var(--primary-hover);
   }
-  
+  .image-preview {
+  margin-top: 10px;
+}
+
+.image-preview img {
+  max-width: 100%;
+  max-height: 200px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
